plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'world'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.retry:spring-retry:1.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.18.0'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.0'
	implementation 'org.springframework.data:spring-data-redis:2.6.0'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'co.elastic.clients:elasticsearch-java:8.9.0'
	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.9.0'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// webp
	implementation 'net.coobird:thumbnailator:0.4.14'
}

tasks.named('test') {
	useJUnitPlatform()
}
